# play-helloworld-secondhand-market-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/account/: urls.py  views.py
app/alembic/: env.py
app/api/: api.py
app/api/v1/posts/: controller.py  schema.py  service.py
app/app/: asgi.py  urls.py  wsgi.py
app/app/core/: authentications.py
app/app/middleware/: jwt_authentication_middleware.py
app/app/settings/: base.py
app/app/utils/: log.py
app/core/: config.py
app/crud/: base.py  crud.py  crud_preset.py
app/db/: init_db.py  session.py
app/models/: base.py  post.py
app/schemas/: post.py
app/snippets/: apps.py  urls.py  views.py
app/snippets/migrations/: 0001_initial.py
app/users/: serializers.py  views.py
app/utils/: file_utils.py  log.py  s3.py  str_utils.py
postgres/default/: init.sql
scripts/: .pre-commit-config.yaml
