[tool.poetry]
name = "secondhand-market-api"
version = "0.1.0"
description = "play-helloworld's secondhand market api"
authors = ["dlake82"]

[tool.poetry.dependencies]
python = "^3.12.2"
sqlmodel = "^0.0.16"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
boto3 = "^1.34.65"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN",
    "D",
    "DTZ005",
    "EM101", "EM102",
    "FA",
    "FIX002",
    "PLR0913",
    "PLR2004",
    "S101",
    "TD",
    "TRY",
]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "type"]

