[tool.poetry]
name = "auth"
version = "0.1.0"
description = "play-helloworld-auth-api"
authors = ["dlake82 <dlake0828@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"
pygments = "^2.17.2"
pytest = "^8.1.1"
django-pytest = "^0.2.0"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
